--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,13 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>2.4.4.4</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
